--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -102,7 +102,8 @@ placeholder
 
 Основной функцией дворца является оказание образовательных и воспитательных услуг, предоставление которых оказывают учебные коллективы, осуществляющие свою деятельность под управлением методических подразделений самого Дворца
 и управляющих организаций МОиН города. Кроме непосредственно обучения сотрудники  составляют различные учебные программы, рабочие планы, отчеты, разрабатывают учебно-методические пособия.
-Обеспечением текущей деятельности дворца, в аспекте поддержания в надлежащем состоянии оборудования, коммуникаций занимаются сервисные подразделения Дворца. Схема должностей СПБГТЮ представлена на рисунке \pageref{fig:fig_management_struct}.
+Обеспечением текущей деятельности дворца, в аспекте поддержания в надлежащем состоянии оборудования, коммуникаций занимаются сервисные подразделения Дворца. Схема должностей СПБГТЮ представлена на рисунке 
+\ref{fig:fig_management_struct}.
 
 \subsection{Задачи требующие инфраструктурного сопровождения}
 Рассмотрим подробнее работу сервисных сотрудников на примере реализации слоевого разделения ИТ- инфраструктуры, которое было описано ранее.
