--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -93,75 +93,174 @@ placeholder
 
 \begin{figure}[ht]
    \centering%центрируем картинку
-   \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{management_structure.eps}
+   \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/management_structure.eps}
    \caption{Структура управления организацией}\label{fig:fig_management_struct}
  \end{figure}
 
-Сотрудники дворца разделены на коллективы или отделы, отвечающие за определенный вид деятельности. 
+\begin{figure}[ht]
+   \centering%центрируем картинку
+   \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/org_struct.eps}
+   \caption{Структура подразделений}\label{fig:org_structure}
+ \end{figure}
+
+
+Сотрудники дворца разделены на коллективы или отделы, отвечающие за определенный вид деятельности(рисунок \ref{fig:org_structure}) 
 Каждый отдел в свою очередь имеет большое количество своих подразделений. У каждого коллектива или отдела есть свой директор, один или несколько заместителей и большое количество сотрудников.
+
+
+\begin{itemize}
+\item Отдел ХВ – отдел художественного воспитания
+\item Отдел ПО – отдел предшкольного  образования
+\item Отдел ГПиДСИ – отдел гуманитарных программ и детских социальных инициатив
+\item Отдел ИТКО – отдел информационных технологий и компьютерного обеспечения
+\item СДЮС школа №1 – специализированная детско-юношеская спортивная школа №1
+\item СДЮС школа № – специализированная детско-юношеская спортивная школа №2
+\item УОК <<фонтанка-37>> – учебно-оздоровительный комплекс <<фонтанка-37>>
+\item ЭБЦ <<крестовский остров>> – эколого-биологический центр <<крестовский остров>>
+\item ЦГПО – центр городских предметных олимпиад.
+\end{itemize}
 
 Основной функцией дворца является оказание образовательных и воспитательных услуг, предоставление которых оказывают учебные коллективы, осуществляющие свою деятельность под управлением методических подразделений самого Дворца
 и управляющих организаций МОиН города. Кроме непосредственно обучения сотрудники  составляют различные учебные программы, рабочие планы, отчеты, разрабатывают учебно-методические пособия.
-Обеспечением текущей деятельности дворца, в аспекте поддержания в надлежащем состоянии оборудования, коммуникаций занимаются сервисные подразделения Дворца. Схема должностей СПБГТЮ представлена на рисунке 
-\ref{fig:fig_management_struct}.
+Обеспечением текущей деятельности дворца, в аспекте поддержания в надлежащем состоянии оборудования, коммуникаций занимаются сервисные подразделения Дворца. Схема должностей СПБГТЮ представлена на рисунке \ref{fig:fig_management_struct}.
 
 \subsection{Задачи требующие инфраструктурного сопровождения}
-Рассмотрим подробнее работу сервисных сотрудников на примере реализации слоевого разделения ИТ- инфраструктуры, которое было описано ранее.
 
-\begin{table}[ht]
-  \centering %центрируем таблицу
-  \caption{Слои инфраструктуры}\label{tab:tab1}
-\begin{tabular}{|c|p{130mm}|}
-\hline Слой & Описание \\ 
-\hline Пользовательский & Во дворце на данном этапе формировнвания ИТ-инфраструктуры компьютеры полностью находятся в распоряжении пользователей  (сотрудников, учащихся), за исключением их первоначальной установки, которая обеспечивается сотрудниками отдела информационных технологий и компьютерного обеспечения (ОИТКО). \\ 
-\hline Функциональный & Можно выделить следующие объекты:
-информационные услуги (виртуальные машины, СПС), 
-люди, предоставляющие эти услуги
-Предоставляются ОИТКО. \\ 
-\hline Информационный & Процесс управления и обмена информацией с помощью серверов (почта, FTP  т.д.). Регламент разрабатывается в подразделении ОИТКО. \\ 
-\hline Коммуникационный & Локальная сеть. Все подключения имеют единую центральную точку. \\ 
-\hline 
-\end{tabular} 
-\end{table}
+хранения результатов работы в понятном как для ИС так и для пользователя виде что решается посредством записи данных в структуру имеющую название файл. 
+
 \subsection{Ограничения накладываемые на информационное сопровождение}
+Поскольку организация осуществляет переход на свободное программное обеспечение, то требуется использование исключительно свободных программных продуктов для 
+В проекте используются только компоненты распространяющиеся под свободными лицензиями, одобренными OSI(Open Software Initiative). Решение должно функционировать в операционной системе GNU/Linux и быть независимым от ОС установленной на рабочем месте пользователя.
+
+\begin{figure}[ht]
+   \centering%центрируем картинку
+   \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/org_custom.eps}
+   \caption{Направления деятельности сотрудников}\label{fig:org_custom}
+ \end{figure}
+
+У каждого работника СПбГДТЮ свой род занятий, обязанности и функции(Рисунок \ref{fig:org_custom}), следовательно, есть свои особенности и специфика .
+
+В учебной деятельности это:
+\begin{itemize}
+\item Обилие документации;
+\item Невозможность перерывов;
+\item Сложность подготовки кадров при работе с информационной системой (ИС), так как многие сотрудники не готовы перейти на новое программное обеспечение, в основном из-за консервативных соображений;
+\end{itemize}
+
+В сервисной деятельности это:
+\begin{itemize}
+\item Обилие документации;
+\item Большой объем работ;
+\item Необходимость ведения учета;
+\item Сопротивление персонала.
+\end{itemize}
+
+В организационной деятельности это:
+\begin{itemize}
+\item Обилие документации;
+\item Необходимость текущего перехода на новую ИС без остановки, так как это приведет к простою в работе, большим финансовым потерям, нарушению учебного процесса и подрыву престижа организации;
+\item Сопротивление персонала, так как многие не готовы переучиваться на другую систему и осваивать новое ПО.
+\end{itemize}
+
+У педагогов в следствии недостатка времени и иногда отсутствия желания осваивать новый продукт могут возникнуть трудности при переходе на новую информационную систему. С другой стороны, педагоги – люди, которые умеют учиться, что является неоспоримым плюсом для более быстрой реализации концепции, также этот фактор может заменить отсутствие желания.
+
+Кроме того, многие педагоги работают не только во Дворце, но и дома, где зачастую используется другое программное обеспечение, в большинстве случаев проприетарное. Следовательно, необходимо предоставить возможность доступа к служебной информации, методическим и др. материалам, необходимым для обеспечения профессиональной деятельности без привязки к определённым операционным системам.
+
+Управленческий аппарат почти весь состоит из людей, которые не только не хотят учиться, но и, зачастую, не умеют это делать. У таких сотрудников нет желания менять устоявшийся бизнес-процесс, поэтому их приходиться заставлять переучиваться, используя административный ресурс, что накладывает жёсткие ограничения на сложность использования системы хранения файлов.
+
+Сервисные сотрудники обладают большим количеством свободного времени,
+но у них отсутствует желание работать, трудиться, им свойственна лень, поэтому им не хочется учиться, но процесс обучения у них происходит быстрее за счёт имеющихся знаний.
+
+Во Дворце ежедневного находиться большое количество сотрудников, выполняющих свои непосредственные обязанности, поэтому функционирование Дворца является непрерывным процессом, поэтому его не только не следует приостанавливать,
+а даже категорически не рекомендуется это делать.
+
+Таким образом система сетевого доступа к файлам должна быть максимально простой с точки зрения пользователя, использовать стандартизованные решения, реализации которых есть под все популярные операционные системы и быть открытым программным обеспечением.
+
 \subsection{Предположительные архитектурные решения и задачи информационной системы}
+Задачей хранилища данных является хранение файлов пользователей, дерева каталогов, информации о пользователях и их правах доступа.
+
+Бизнес логика реализуется на сервере приложений, в рамках которой обеспечивается:
+\begin{itemize}
+
+\item авторизация пользователей, 
+\item предоставление требуемых файлов и каталогов для работы в соответствие с правами доступа, 
+\item блокировка используемых файлов 
+\item получение обновлённой версии с возможным получением предыдущих версий файла.
+\item запись информации о действиях пользователей в рамках системы
+ \end{itemize}
+
+Таким образом требуется:
+\begin{itemize}
+\item ведение журнала активности пользователей
+\item предоставление удобный доступ пользователя к файлам и директориям, на которые ему были установлены права доступа
+\item осуществление разделения пользователей по ролям доступа
+\end{itemize}
+
+Исходя из требований к системе, предлагается трёхзвенная архитектура: Клиент -- сервер приложений -- хранилище данных.
 
 \section{Обзор аналогов}
 \subsection{Samba}
 
-Samba - серверное ПО реализующее протоколы CIFS, SMB для доступа к сетевым ресурсам. 
-Минусом данного варианта реализации является ориентированность на работу в локальной сети, 
-отсутствие версионирования файлов(реализуется только с помощью версионных ФС, реализации 
-которых в Linux не достаточно протестированы для применения в промышленной эксплуатации).
+Samba — программа, которая позволяет обращаться к сетевым дискам на различных операционных системах по протоколу SMB/CIFS. 
+Имеет клиентскую и серверную части. Является свободным программным обеспечением, выпущена под лицензией GPL.
+Минусами данного варианта реализации является ориентированность на работу в локальной сети, отсутствие версионирования файлов(реализуется только с помощью версионных ФС, реализации которых в Linux недостаточно протестированы для применения в промышленной эксплуатации).
 
 \subsection{FTP с разделением прав}
 
 Данное решение сложно в настройке, использовании. У этого решения отсутствует возможность 
-<<прозрачной>> работы с файлами. Файлы требуется сначала загрузить на локальный диск, внести 
-изменения и после этого загрузить обратно на сервер. При этом не сохраняется предыдущая версия 
-файла. При использовании такого решения, сложно получать информацию об изменениях~в правах, 
-модификациях файлов и дерева каталогов. Версионность реализуется с только с помощью версионных ФС.
+удалённой работы с файлами. Файлы требуется сначала загрузить на локальный диск, внести 
+изменения и после этого загрузить обратно на сервер. При этом не сохраняется предыдущая версия файла. При использовании такого решения, сложно получать информацию об изменениях прав доступа, модификациях файлов и дерева каталогов. Версионность доступа реализуется с только с помощью версионных ФС.
 
-\subsection{Системы контроля версий}
+\subsection{Системы управления версиями}
+Система управления версиями — программное обеспечение для облегчения работы с изменяющейся информацией. Система управления версиями позволяет хранить несколько версий одного и того же документа, при необходимости, возвращаться к более ранним версиям, определять, кто и когда сделал то или иное изменение и многое другое.
 
-Системы контроля версий такие как: git, svn, cvs; 
-требуют определённой подготовки от пользователя. Это решение требует от пользователя ручного 
-помещения данных в хранилище. Невозможно ограничить глубину сохранения версий файлов.
+Системы контроля версий такие как: git, svn, cvs; требуют определённой подготовки от пользователя. Это решение требует от пользователя ручного получения файлов из хранилища и помещения их обратно. Невозможно ограничить глубину сохранения версий файлов, что при использовании не-текстовых данных приводит к быстрому разрастанию хранилища файлов.
 
 \section{Формализация техического задания}
 \subsection{Платформы}
 \subsection{Средства}
 \subsection{Функциональные ограничения}
 
+Требуется ведение журнала активности пользователей, включающего в себя информацию о следующих действиях: 
+\begin{itemize}
+\item дату и время входа/выхода пользователя
+\item создание файла
+\item модификация файла
+\item удаление файла
+\item установка блокировки на файл
+\item снятие блокировки с файла
+\end{itemize}
+
+Требуется предоставить удобный доступ пользователя к файлам и директориям, на которые ему были установлены права доступа такие как: чтение, запись, удаление файлов и каталогов.
+
+Требуется разработать инструмент позволяющий:	
+\begin{itemize}
+\item получать информацию об изменениях произошедших с последнего входа пользователя в систему	
+\item выполнять аутентификацию пользователя по логину/паролю	
+\item выполнять подключение рабочей области пользователя в дерево каталогов
+\end{itemize}
+
+Необходимо осуществлять разделение пользователей по следующим ролям:	
+\begin{itemize}
+\item Пользователь 	в соответствие со своими правами имеет 	доступ к файлам и каталогам подразделения и к общим каталогам. Имеет доступ к предыдущим версиям своих файлов на чтение. 		
+\item Администратор подразделения может назначать права 	доступа для сотрудников подразделения, создавать и удалять каталоги в каталоге подразделения. Имеет доступ на чтение к предыдущим версиям файлов подразделения	
+\item Администратор создает и удаляет учётные записи пользователей, записи подразделений, назначает права доступа, имеет полный 	доступ к дереву каталогов, имеет полный 	доступ к предыдущим версиям файлов.
+\end{itemize}
 
 \chapter{Глава 2. Проектирование}
 \section{Системные архитектурные решения}
 \subsection{Распределение задач между компонентами}
+
 \subsection{Описание задач решаемых отдельными компонентами}
 \subsection{Описание интерфейсов между компонентами}
 
 \section{Архитектура программы}
 \subsection{Архитектура БД}
+\begin{figure}[ht]
+   \centering%центрируем картинку
+   \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/DB.eps}
+   \caption{Схема БД}\label{fig:db_scheme}
+ \end{figure}
 \subsection{Архитектура клиентской части}
 \subsection{Архитектура сервера приложений}
 \section{Проектирование инфраструктуры}
@@ -178,72 +277,11 @@ Samba - серверное ПО реализующее протоколы CIFS, 
 \subsection{Организационные мероприятия}
 \subsection{Технические мероприятия}
 \subsection{Мероприятия сопровождения}
-\section{Требования}
 
-\subsection{Основные требования}
-В проекте используются только компоненты распространяющиеся под свободными лицензиями. 
-Решение должно функционировать в операционной системе GNU/Linux.
-
-Решение должно предоставлять пользователям защищённый сетевой доступ к 
-хранилищу данных с разграничением прав доступа на создание, модификацию, удаление 
-файлов и каталогов.
-
-Требуется ведение журнала активности пользователей, включающего в себя информацию о следующих действиях: 
-
-\begin{itemize}
-\item дату и время входа/выхода пользователя
-\item создание файла
-\item модификация файла
-\item удаление файла
-\item установка блокировки на файл
-\item снятие блокировки с файла
-\end{itemize}
-
-Клиентская часть предоставляет удобный доступ пользователя к файлам и директориям, на которые ему были 
-установлены права доступа такие как: чтение, запись, удаление файлов и каталогов.
-Требуется разработать инструмент позволяющий:
-
-\begin{itemize}
-\item получать информацию об изменениях произошедших с последнего входа пользователя в систему	
-\item выполнять аутентификацию пользователя по логину/паролю	
-\item выполнять подключение рабочей области пользователя в дерево каталогов
-\end{itemize}
-
-\subsection{Описание ролей в системе}
-
-Необходимо осуществлять разделение пользователей по следующим ролям:
-\begin{itemize}
-\item Пользователь в соответствие со своими правами имеет доступ к 
-файлам и каталогам подразделения и к общим каталогам. Имеет доступ к 
-предыдущим версиям своих файлов на чтение. 
-\item Администратор подразделения может назначать права доступа для сотрудников 
-подразделения, создавать и удалять каталоги в каталоге подразделения. 
-Имеет доступ на чтение к предыдущим версиям файлов подразделения	
-\item Администратор создает и удаляет учётные записи пользователей, 
-записи подразделений, назначает права доступа, имеет полный
-доступ к дереву каталогов, имеет полный доступ к предыдущим версиям файлов.
-\end{itemize}
-
-\chapter{Архитектура}
-Предлагается трёхзвенная архитектура: Клиент -- сервер приложений -- хранилище данных.
-
-Задачей хранилища данных является хранение файлов пользователей, дерева каталогов, 
-информации о пользователях и их правах доступа. Бизнес логика реализуется на сервере 
-приложений. В рамках которой обеспечивается: 
-
-\begin{itemize}
-\item авторизация пользователей,
-\item предоставление требуемых файлов и каталогов для работы в 
-соответствие с правами доступа, 
-\item блокировка используемых файлов и получение обновлённой 
-версии с возможным сохранением предыдущих версий файла.
-\end{itemize}
-\chapter{Реализация}
-\chapter{Экономическая часть}
-\chapter{Безопасность}
+\chapter{Глава 4. Экономическая часть}
+\chapter{Глава 5. Безопасность}
 
 \Conclusion
 заключение
-
 
 \end{document}
