--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -126,41 +126,42 @@ placeholder
 
 \subsection{Задачи требующие инфраструктурного сопровождения}
 
-хранения результатов работы в понятном как для ИС так и для пользователя виде что решается посредством записи данных в структуру имеющую название файл. 
+%хранения результатов работы в понятном как для ИС так и для пользователя виде что решается посредством записи данных в структуру имеющую название файл. 
+% \begin{figure}[ht]
+%    \centering%центрируем картинку
+%    \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/org_custom.eps}
+%    \caption{Направления деятельности сотрудников}\label{fig:org_custom}
+%  \end{figure}
+% 
+% У каждого работника СПбГДТЮ свой род занятий, обязанности и функции(Рисунок \ref{fig:org_custom}), следовательно, есть свои особенности и специфика .
+% 
+% В учебной деятельности это:
+% \begin{itemize}
+% \item Обилие документации;
+% \item Невозможность перерывов;
+% \item Сложность подготовки кадров при работе с информационной системой (ИС), так как многие сотрудники не готовы перейти на новое программное обеспечение, в основном из-за консервативных соображений;
+% \end{itemize}
+% 
+% В сервисной деятельности это:
+% \begin{itemize}
+% \item Обилие документации;
+% \item Большой объем работ;
+% \item Необходимость ведения учета;
+% \item Сопротивление персонала.
+% \end{itemize}
+% 
+% В организационной деятельности это:
+% \begin{itemize}
+% \item Обилие документации;
+% \item Необходимость текущего перехода на новую ИС без остановки, так как это приведет к простою в работе, большим финансовым потерям, нарушению учебного процесса и подрыву престижа организации;
+% \item Сопротивление персонала, так как многие не готовы переучиваться на другую систему и осваивать новое ПО.
+% \end{itemize}
+
+Для обеспечения работы подразделений требуется система сетевого хранения файлов по подразделениям с возможностью разделения прав доступа. Для разных подразделений это могут быть различные виды файлов: изображения, документы в различных форматах, аудио или видео информация и так далее. Подразделениям необхдима возможность выкладывать файлы в общий доступ
 
 \subsection{Ограничения накладываемые на информационное сопровождение}
 Поскольку организация осуществляет переход на свободное программное обеспечение, то требуется использование исключительно свободных программных продуктов для 
 В проекте используются только компоненты распространяющиеся под свободными лицензиями, одобренными OSI(Open Software Initiative). Решение должно функционировать в операционной системе GNU/Linux и быть независимым от ОС установленной на рабочем месте пользователя.
-
-\begin{figure}[ht]
-   \centering%центрируем картинку
-   \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/org_custom.eps}
-   \caption{Направления деятельности сотрудников}\label{fig:org_custom}
- \end{figure}
-
-У каждого работника СПбГДТЮ свой род занятий, обязанности и функции(Рисунок \ref{fig:org_custom}), следовательно, есть свои особенности и специфика .
-
-В учебной деятельности это:
-\begin{itemize}
-\item Обилие документации;
-\item Невозможность перерывов;
-\item Сложность подготовки кадров при работе с информационной системой (ИС), так как многие сотрудники не готовы перейти на новое программное обеспечение, в основном из-за консервативных соображений;
-\end{itemize}
-
-В сервисной деятельности это:
-\begin{itemize}
-\item Обилие документации;
-\item Большой объем работ;
-\item Необходимость ведения учета;
-\item Сопротивление персонала.
-\end{itemize}
-
-В организационной деятельности это:
-\begin{itemize}
-\item Обилие документации;
-\item Необходимость текущего перехода на новую ИС без остановки, так как это приведет к простою в работе, большим финансовым потерям, нарушению учебного процесса и подрыву престижа организации;
-\item Сопротивление персонала, так как многие не готовы переучиваться на другую систему и осваивать новое ПО.
-\end{itemize}
 
 У педагогов в следствии недостатка времени и иногда отсутствия желания осваивать новый продукт могут возникнуть трудности при переходе на новую информационную систему. С другой стороны, педагоги – люди, которые умеют учиться, что является неоспоримым плюсом для более быстрой реализации концепции, также этот фактор может заменить отсутствие желания.
 
@@ -172,7 +173,7 @@ placeholder
 но у них отсутствует желание работать, трудиться, им свойственна лень, поэтому им не хочется учиться, но процесс обучения у них происходит быстрее за счёт имеющихся знаний.
 
 Во Дворце ежедневного находиться большое количество сотрудников, выполняющих свои непосредственные обязанности, поэтому функционирование Дворца является непрерывным процессом, поэтому его не только не следует приостанавливать,
-а даже категорически не рекомендуется это делать.
+а категорически не рекомендуется это делать.
 
 Таким образом система сетевого доступа к файлам должна быть максимально простой с точки зрения пользователя, использовать стандартизованные решения, реализации которых есть под все популярные операционные системы и быть открытым программным обеспечением.
 
