--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -69,8 +69,9 @@
 \tableofcontents
 
 %\NormRefs % Нормативные ссылки 
-%\Defines % Необходимые определения 
-
+\Defines % Необходимые определения 
+СУБД -
+FUSE -
 
 
 \Introduction
@@ -217,8 +218,13 @@ Samba — программа, которая позволяет обращать
 
 Системы контроля версий такие как: git, svn, cvs; требуют определённой подготовки от пользователя. Это решение требует от пользователя ручного получения файлов из хранилища и помещения их обратно. Невозможно ограничить глубину сохранения версий файлов, что при использовании не-текстовых данных приводит к быстрому разрастанию хранилища файлов.
 
+\subsection{Системы электронного документооборота}
+Система документооборота, система электронного документооборота (СЭД) — автоматизированная многопользовательская система, сопровождающая процесс управления работой иерархической организации с целью обеспечения выполнения этой организацией своих функций. При этом предполагается, что процесс управления опирается на человеко-читаемые документы, содержащие в слабоформализованной форме инструкции для сотрудников организации, необходимые к исполнению.
+
+Такие системы оориентированы на управление бизнес-процессами и оперируют понятием документа. Организовать в такой системе совместную работу над разнородными материалами, такими как методические пособия сложно, поскольку зачастую это может быть мультимедийная информация к обработке и хранению которой СЭД не приспособлены.
+
 \section{Формализация техического задания}
-\subsection{Платформы}
+\subsection{Платформа}
 \subsection{Средства}
 \subsection{Функциональные ограничения}
 
@@ -257,13 +263,49 @@ Samba — программа, которая позволяет обращать
 
 \section{Архитектура программы}
 \subsection{Архитектура БД}
+
+В проекте используется технология объектно-реляционного отображения, позволяющая работать с записями в БД, как с объектами языка программирования. Такой подход позволяет представить БД как абстрактное хранилище объектов и не задумываться над деталями конкретной реализации БД.
+
+Для хранения данных может использоваться любая реляционная СУБД, которая поддерживается выбранной библиотекой для объектно-реляционного отображения.
+
 \begin{figure}[ht]
    \centering%центрируем картинку
    \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/DB.eps}
    \caption{Схема БД}\label{fig:db_scheme}
  \end{figure}
+
+Основные сущности используемые в системе показаны на рисунке \ref{fig:db_scheme}. В БД хранится информация о пользователях, группах, правах доступа, хранящихся файлах их содержимом и версиях.
+ 
 \subsection{Архитектура клиентской части}
+
+Клиентская часть реализует доступ к файловому хранилищу как к подкаталогу в дереве файлов пользователя. Это достигается использованием средств, которые позволяют предоставить POSIX интерфейс к сетевому хранилищу данных.
+
+\begin{figure}[ht]
+   \centering%центрируем картинку
+   \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/client_sequencs.eps}
+   \caption{Схема взаимодействия клиента с сервером приложений}\label{fig:client_sequence}
+ \end{figure}
+
+На диаграмме последовательностей (рисунок \ref{fig:client_sequence}) показаны события происходящие в процессе работы пользователя с файловой системой. В работе пользователя выделяются три основных этапа: монтирование, изменение объектов файловой системы и отмонтирование системы. 
+
+При монтировании ФС, у пользователя запрашивают его логин/пароль для работы в системе, после этого сервер приложений проверяет правильность введённых данных и аутентифицирует его и возвращает содержимое корневой директории пользователя.
+
+При изменениии файла происходит блокировка ресурса на сервере приложений. Запись данных пользователем идёт в локальный кэш, который через некоторое время отправляется на сервер приложений. Использование кеширования позволяет уменьшить количество версий файлов, особенно для приложений в которых используется автосохранение файлов.
+
+При отмонтировании происходит оттравка данных из кеша клиентской части на сервер приложений и отключение от сервера приложений.
+
 \subsection{Архитектура сервера приложений}
+
+Сервер приложений используется для обработки запросов пользователей и подготовкой полученных файлов к сохранению в хранилище. Сервер приложений состоит из многопоточного обработчика запросов пользователей, обработчика аутентификации и авторизации пользователей и обработчика davfs протокола используемого для связи с клиентским приложением.
+
+\begin{figure}[ht]
+   \centering%центрируем картинку
+   \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/davstorage.eps}
+   \caption{Диаграмма значимых классов проекта}\label{fig:davstorage}
+ \end{figure}
+ 
+ Диаграмма классов системы, без реализации WebDAV и http-сервера представлена на рисунке \ref{fig:davstorage}. Система постоена на принципе независимости от реализации хранения файлов и информации о пользователях, что позволяет реализовать своё хранилище данных, реализующее интерфейс для WebDAV протокола.
+
 \section{Проектирование инфраструктуры}
 \subsection{Оценка требований к серверу}
 \subsection{Оценка требований к рабочему месту пользователя}
@@ -273,6 +315,9 @@ Samba — программа, которая позволяет обращать
 \section{Особенности реализации БД}
 \section{Особенности реализации инструмента администрирования}
 \section{Особенности реализации клиентской части}
+Клиентская часть состоит из модуля к FUSE, утилит монтирования и графического интерфейса для утилит монтирования для упрощения работы пользователям. 
+
+--- Картинка с пояснением, что такое FUSE
 \section{Особенности тестирования и отладки}
 \section{План внедрения и отладки}
 \subsection{Организационные мероприятия}
