--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -84,13 +84,9 @@ placeholder
 
 \section{Обзор особенностей заказчика}
 \subsection{Организационная структура}
-Санкт-петербургский городской дворец творчества юных обладает большой и сложной организационной структурой, для каждого 
+Санкт-петербургский городской дворец творчества юных(СпбГДТЮ) обладает большой и сложной организационной структурой, для каждого 
 элемента которого, характерен свой вид деятельности. Рассмотрим организацию с точки зрения двух аспектов: территориального
 и структурного.
-
-Территориальная распределенность обусловленна тем, что Дворц творчества юных расположен в центре города, на его территории находиться множество отдельных корпусов, а также ему принадлежит довольно большой участок земли на Крестовском острове и ЗЦДЮТ «Зеркальный». Доступ пользователей к глобальным и локальным информационным ресурсам обеспечивается подключениями по выделенной линии
-(2 мб/с), по оптоволокну (1000 мб/с) и прямыми подключениями к узлу (100 мб/с). Сеть рассчитана на большое количество пользователей ИТ-инфраструктурой (более
-15 000 компьютеров). Среди них: работники дворца; педагоги; управляющий персонал;  персонал, отвечающий за сервисную деятельность; учащиеся. Сложность управленческой структуры организации определяется большим штатом сотрудников и широким спектром исполняемых функций. Главным руководителем является генеральный директор, которому подчиняются различные подразделения такие как: финансовый, хозяйственный, учебно-воспитательный и другие сектора.
 
 \begin{figure}[ht]
    \centering%центрируем картинку
@@ -98,14 +94,17 @@ placeholder
    \caption{Структура управления организацией}\label{fig:fig_management_struct}
  \end{figure}
 
+Территориальная распределенность обусловленна тем, что Дворец творчества юных расположен в центре города, на его территории находиться множество отдельных корпусов, а также ему принадлежит довольно большой участок земли на Крестовском острове и ЗЦДЮТ «Зеркальный». Доступ пользователей к глобальным и локальным информационным ресурсам обеспечивается подключениями по выделенной линии
+(2 мб/с), по оптоволокну (1000 мб/с) и прямыми подключениями к узлу (100 мб/с). Сеть рассчитана на большое количество пользователей ИТ-инфраструктурой (более
+15 000 компьютеров). Среди них: работники дворца; педагоги; управляющий персонал;  персонал, отвечающий за сервисную деятельность; учащиеся. Сложность управленческой структуры организации определяется большим штатом сотрудников и широким спектром исполняемых функций. Главным руководителем является генеральный директор, которому подчиняются различные подразделения такие как: финансовый, хозяйственный, учебно-воспитательный и другие сектора.
+
 \begin{figure}[ht]
    \centering%центрируем картинку
    \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/org_struct.eps}
    \caption{Структура подразделений}\label{fig:org_structure}
  \end{figure}
 
-
-Сотрудники дворца разделены на коллективы или отделы, отвечающие за определенный вид деятельности(рисунок \ref{fig:org_structure}) 
+Сотрудники дворца разделены на коллективы или отделы, отвечающие за определенный вид деятельности(рисунок \ref{fig:org_structure}).
 Каждый отдел в свою очередь имеет большое количество своих подразделений. У каждого коллектива или отдела есть свой директор, один или несколько заместителей и большое количество сотрудников.
 
 
@@ -125,80 +124,45 @@ placeholder
 и управляющих организаций МОиН города. Кроме непосредственно обучения сотрудники  составляют различные учебные программы, рабочие планы, отчеты, разрабатывают учебно-методические пособия.
 Обеспечением текущей деятельности дворца, в аспекте поддержания в надлежащем состоянии оборудования, коммуникаций занимаются сервисные подразделения Дворца. Схема должностей СПБГТЮ представлена на рисунке \ref{fig:fig_management_struct}.
 
-\subsection{Задачи требующие инфраструктурного сопровождения}
+\subsection{Задачи требующие инфраструктурного сопровождения}\label{ssect:tasks_infra}
+Основной функцией дворца является оказание образовательных и воспитательных услуг, предоставление которых оказывают учебные коллективы, осуществляющие свою деятельность под управлением методических подразделений самого Дворца
+и управляющих организаций МОиН города. Кроме непосредственно обучения сотрудники составляют различные учебные программы, рабочие планы, отчеты, разрабатывают учебно-методические пособия. 
 
-%хранения результатов работы в понятном как для ИС так и для пользователя виде что решается посредством записи данных в структуру имеющую название файл. 
-% \begin{figure}[ht]
-%    \centering%центрируем картинку
-%    \includegraphics[height=160mm, width=0.8\textwidth, clip, keepaspectratio]{pictures/org_custom.eps}
-%    \caption{Направления деятельности сотрудников}\label{fig:org_custom}
-%  \end{figure}
-% 
-% У каждого работника СПбГДТЮ свой род занятий, обязанности и функции(Рисунок \ref{fig:org_custom}), следовательно, есть свои особенности и специфика .
-% 
-% В учебной деятельности это:
-% \begin{itemize}
-% \item Обилие документации;
-% \item Невозможность перерывов;
-% \item Сложность подготовки кадров при работе с информационной системой (ИС), так как многие сотрудники не готовы перейти на новое программное обеспечение, в основном из-за консервативных соображений;
-% \end{itemize}
-% 
-% В сервисной деятельности это:
-% \begin{itemize}
-% \item Обилие документации;
-% \item Большой объем работ;
-% \item Необходимость ведения учета;
-% \item Сопротивление персонала.
-% \end{itemize}
-% 
-% В организационной деятельности это:
-% \begin{itemize}
-% \item Обилие документации;
-% \item Необходимость текущего перехода на новую ИС без остановки, так как это приведет к простою в работе, большим финансовым потерям, нарушению учебного процесса и подрыву престижа организации;
-% \item Сопротивление персонала, так как многие не готовы переучиваться на другую систему и осваивать новое ПО.
-% \end{itemize}
+Для обеспечения работы сотрудников требуется система сетевого хранения файлов по подразделениям с возможностью разделения прав доступа сотрудников. Такое разделение необходимо для того, чтобы . Для разных подразделений это могут быть различные виды файлов: изображения, документы в различных форматах, аудио или видео информация и так далее. Подразделениям необходима возможность выкладывать файлы в общий доступ.
 
-Для обеспечения работы подразделений требуется система сетевого хранения файлов по подразделениям с возможностью разделения прав доступа. Для разных подразделений это могут быть различные виды файлов: изображения, документы в различных форматах, аудио или видео информация и так далее. Подразделениям необхдима возможность выкладывать файлы в общий доступ
+\subsection{Ограничения накладываемые на информационное сопровождение}\label{ssect:restrict_infra}
+Поскольку организация осуществляет переход на свободное программное обеспечение, то требуется использование исключительно свободных программных продуктов для реализации системы хрпнения файлов. В проекте используются только компоненты распространяющиеся под свободными лицензиями, одобренными OSI(Open Software Initiative). Решение должно функционировать в операционной системе GNU/Linux и быть независимым от ОС установленной на рабочем месте пользователя.
 
-\subsection{Ограничения накладываемые на информационное сопровождение}
-Поскольку организация осуществляет переход на свободное программное обеспечение, то требуется использование исключительно свободных программных продуктов для 
-В проекте используются только компоненты распространяющиеся под свободными лицензиями, одобренными OSI(Open Software Initiative). Решение должно функционировать в операционной системе GNU/Linux и быть независимым от ОС установленной на рабочем месте пользователя.
-
-У педагогов в следствии недостатка времени и иногда отсутствия желания осваивать новый продукт могут возникнуть трудности при переходе на новую информационную систему. С другой стороны, педагоги – люди, которые умеют учиться, что является неоспоримым плюсом для более быстрой реализации концепции, также этот фактор может заменить отсутствие желания.
+У педагогов в следствии недостатка времени и иногда отсутствия желания осваивать новый продукт могут возникнуть трудности при переходе на новую информационную систему. С другой стороны, педагоги – люди, которые умеют учиться, что является неоспоримым плюсом для более быстрого перехода на новую систему.
 
 Кроме того, многие педагоги работают не только во Дворце, но и дома, где зачастую используется другое программное обеспечение, в большинстве случаев проприетарное. Следовательно, необходимо предоставить возможность доступа к служебной информации, методическим и др. материалам, необходимым для обеспечения профессиональной деятельности без привязки к определённым операционным системам.
 
-Управленческий аппарат почти весь состоит из людей, которые не только не хотят учиться, но и, зачастую, не умеют это делать. У таких сотрудников нет желания менять устоявшийся бизнес-процесс, поэтому их приходиться заставлять переучиваться, используя административный ресурс, что накладывает жёсткие ограничения на сложность использования системы хранения файлов.
+Управленческий аппарат почти весь состоит из людей далёких от информационный технологий. У таких сотрудников нет желания менять устоявшийся бизнес-процесс, поэтому их приходиться заставлять переучиваться, используя административный ресурс, что накладывает жёсткие ограничения на сложность использования системы хранения файлов.
 
-Сервисные сотрудники обладают большим количеством свободного времени,
-но у них отсутствует желание работать, трудиться, им свойственна лень, поэтому им не хочется учиться, но процесс обучения у них происходит быстрее за счёт имеющихся знаний.
+%Сервисные сотрудники обладают большим количеством свободного времени,
+%но у них отсутствует желание работать, трудиться, им свойственна лень, поэтому им не хочется учиться, но процесс обучения у них происходит быстрее за счёт имеющихся знаний.
 
-Во Дворце ежедневного находиться большое количество сотрудников, выполняющих свои непосредственные обязанности, поэтому функционирование Дворца является непрерывным процессом, поэтому его не только не следует приостанавливать,
+Во Дворце ежедневного находится большое количество сотрудников, выполняющих свои непосредственные обязанности, поэтому функционирование Дворца является непрерывным процессом, поэтому его не только не следует приостанавливать,
 а категорически не рекомендуется это делать.
 
 Таким образом система сетевого доступа к файлам должна быть максимально простой с точки зрения пользователя, использовать стандартизованные решения, реализации которых есть под все популярные операционные системы и быть открытым программным обеспечением.
 
 \subsection{Предположительные архитектурные решения и задачи информационной системы}
-Задачей хранилища данных является хранение файлов пользователей, дерева каталогов, информации о пользователях и их правах доступа.
+Исходя из положений раздела~\ref{ssect:tasks_infra} задачей хранилища данных является хранение файлов пользователей, дерева каталогов, информации о пользователях и их правах доступа. В процессе работы, пользователи будут использовать большое количество различных форматов файлов, поэтому представление файла в системе хранения должно быть максимально обобщённым. 
 
-Бизнес логика реализуется на сервере приложений, в рамках которой обеспечивается:
-\begin{itemize}
+Система ориентирована на пользователей с различным уровнем знакомства с информационными технологиями(раздел~\ref{ssect:restrict_infra}). Для минимизации риска утери данных при случайном удалении или перезаписи файлов требуется реализовать хранение истории версий таким образом, чтобы пользователь мог получить доступ к удалённому файлу или одной из предыдущих доступных версий. В то же время, для уменьшения обьёма данных хранящихся на жестком диске хранилища, требуется возможность окончательного удаления предыдущих версий файлов по прошествии определённого срока администратором системы.
 
-\item авторизация пользователей, 
-\item предоставление требуемых файлов и каталогов для работы в соответствие с правами доступа, 
-\item блокировка используемых файлов 
-\item получение обновлённой версии с возможным получением предыдущих версий файла.
-\item запись информации о действиях пользователей в рамках системы
- \end{itemize}
+Для осуществления контроля за действиями пользователей и поиска ошибок в работе системы требуется сохранять информацию о действиях пользователей в системе с момента входа в систему. Для поиска проблемы необходимо знать какие действия выполнял пользователь в указанный момент времени и были ли ему разрешены данные действия правами доступа на тот момент.
 
 Таким образом требуется:
 \begin{itemize}
-\item ведение журнала активности пользователей
-\item предоставление удобный доступ пользователя к файлам и директориям, на которые ему были установлены права доступа
 \item осуществление разделения пользователей по ролям доступа
+\item предоставление удобного доступа пользователя к файлам и директориям, на которые ему были установлены права доступа.
+\item хранение предыдущих версий файлов с возможностью их последующего удаления
+\item ведение журнала активности пользователей
 \end{itemize}
 
-Исходя из требований к системе, предлагается трёхзвенная архитектура: Клиент -- сервер приложений -- хранилище данных.
+Исходя из требований к системе, предлагается трёхзвенная архитектура: Клиент -- сервер приложений -- хранилище данных. Такая архитектура позволяет разделить логику работы клиент-серверной части и хранения файлов в хранилище данных. 
 
 \section{Обзор аналогов}
 \subsection{Samba}
@@ -225,6 +189,7 @@ Samba — программа, которая позволяет обращать
 
 \section{Формализация техического задания}
 \subsection{Платформа}
+Исходя из требований заказчика и 
 \subsection{Средства}
 \subsection{Функциональные ограничения}
 
@@ -257,7 +222,15 @@ Samba — программа, которая позволяет обращать
 \chapter{Глава 2. Проектирование}
 \section{Системные архитектурные решения}
 \subsection{Распределение задач между компонентами}
+Бизнес логика реализуется на сервере приложений, в рамках которой обеспечивается:
+\begin{itemize}
 
+\item авторизация пользователей, 
+\item предоставление требуемых файлов и каталогов для работы в соответствие с правами доступа, 
+\item блокировка используемых файлов 
+\item получение обновлённой версии с возможным получением предыдущих версий файла.
+\item запись информации о действиях пользователей в рамках системы
+ \end{itemize}
 \subsection{Описание задач решаемых отдельными компонентами}
 \subsection{Описание интерфейсов между компонентами}
 
