--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -120,7 +120,7 @@ placeholder
 \item ЦГПО – центр городских предметных олимпиад.
 \end{itemize}
 
-Основной функцией дворца является оказание образовательных и воспитательных услуг, предоставление которых оказывают учебные коллективы, осуществляющие свою деятельность под управлением методических подразделений самого Дворца
+Основной функцией дворца является оказание образовательных и воспитательных услуг, которые оказывают учебные коллективы, осуществляющие свою деятельность под управлением методических подразделений самого Дворца
 и управляющих организаций МОиН города. Кроме непосредственно обучения сотрудники  составляют различные учебные программы, рабочие планы, отчеты, разрабатывают учебно-методические пособия.
 Обеспечением текущей деятельности дворца, в аспекте поддержания в надлежащем состоянии оборудования, коммуникаций занимаются сервисные подразделения Дворца. Схема должностей СПБГТЮ представлена на рисунке \ref{fig:fig_management_struct}.
 
@@ -168,19 +168,21 @@ placeholder
 \subsection{Samba}
 
 Samba — программа, которая позволяет обращаться к сетевым дискам на различных операционных системах по протоколу SMB/CIFS. 
-Имеет клиентскую и серверную части. Является свободным программным обеспечением, выпущена под лицензией GPL.
-Минусами данного варианта реализации является ориентированность на работу в локальной сети, отсутствие версионирования файлов(реализуется только с помощью версионных ФС, реализации которых в Linux недостаточно протестированы для применения в промышленной эксплуатации).
+Имеет клиентскую и серверную части. Является свободным программным обеспечением, выпущена под лицензией GPL. Такая система удобна в использовании, предоставляет удобный доступ клиенту к файлам, не требует предварительной передачи на жёсткий диск пользователя. Минусами данного варианта реализации является ориентированность на работу в локальной сети, отсутствие версионности хранящихся файлов.
 
 \subsection{FTP с разделением прав}
+FTP (англ. File Transfer Protocol — протокол передачи файлов) — протокол, предназначенный для передачи файлов в компьютерных сетях. FTP позволяет подключаться к серверам FTP, просматривать содержимое каталогов и загружать файлы с сервера или на сервер; кроме того, возможен режим передачи файлов между серверами. FTP является одним из старейших прикладных протоколов, появившимся задолго до HTTP, в 1971 году.
 
 Данное решение сложно в настройке, использовании. У этого решения отсутствует возможность 
 удалённой работы с файлами. Файлы требуется сначала загрузить на локальный диск, внести 
-изменения и после этого загрузить обратно на сервер. При этом не сохраняется предыдущая версия файла. При использовании такого решения, сложно получать информацию об изменениях прав доступа, модификациях файлов и дерева каталогов. Версионность доступа реализуется с только с помощью версионных ФС.
+изменения и после этого загрузить обратно на сервер. При этом не сохраняется предыдущая версия файла. При использовании такого решения, сложно получать информацию об изменениях прав доступа, модификациях файлов и дерева каталогов. Версионность доступа реализуется с только с помощью версионных ФС. При использовании такого решения приходится либо использовать встроенные средства авторизации, которые в большинстве своём не обладают достаточной гибкостью, либо создавать системных пользователей на сервере, что при неправильной настройке политик доступа может представлять собой уязхвимое место в системе.
 
 \subsection{Системы управления версиями}
 Система управления версиями — программное обеспечение для облегчения работы с изменяющейся информацией. Система управления версиями позволяет хранить несколько версий одного и того же документа, при необходимости, возвращаться к более ранним версиям, определять, кто и когда сделал то или иное изменение и многое другое.
 
-Системы контроля версий такие как: git, svn, cvs; требуют определённой подготовки от пользователя. Это решение требует от пользователя ручного получения файлов из хранилища и помещения их обратно. Невозможно ограничить глубину сохранения версий файлов, что при использовании не-текстовых данных приводит к быстрому разрастанию хранилища файлов.
+Системы контроля версий такие как: git, svn, cvs; требуют определённой подготовки от пользователя. Это решение требует от пользователя ручного получения файлов из хранилища и помещения их обратно. Исходя из причин по которым создавались такие системы, невозможно ограничить глубину сохранения версий файлов, что при использовании не-текстовых данных приводит к быстрому разрастанию хранилища файлов.
+
+Решение на основе git является наиболее безопасным, поскольку все данные передаются через шифрованное соединение, а аутентификация пользователя производится на основе криптографических ключей.
 
 \subsection{Системы электронного документооборота}
 Система документооборота, система электронного документооборота (СЭД) — автоматизированная многопользовательская система, сопровождающая процесс управления работой иерархической организации с целью обеспечения выполнения этой организацией своих функций. При этом предполагается, что процесс управления опирается на человеко-читаемые документы, содержащие в слабоформализованной форме инструкции для сотрудников организации, необходимые к исполнению.
@@ -189,8 +191,9 @@ Samba — программа, которая позволяет обращать
 
 \section{Формализация техического задания}
 \subsection{Платформа}
-Исходя из требований заказчика и 
-\subsection{Средства}
+Исходя из ограничений описанных в разделе~\ref{ssect:restrict_infra} требуется использование исключительно свободного ПО для реализации системы хранения файлов. 
+\subsection{Средства разработки}
+
 \subsection{Функциональные ограничения}
 
 Требуется ведение журнала активности пользователей, включающего в себя информацию о следующих действиях: 
@@ -224,14 +227,24 @@ Samba — программа, которая позволяет обращать
 \subsection{Распределение задач между компонентами}
 Бизнес логика реализуется на сервере приложений, в рамках которой обеспечивается:
 \begin{itemize}
-
 \item авторизация пользователей, 
 \item предоставление требуемых файлов и каталогов для работы в соответствие с правами доступа, 
 \item блокировка используемых файлов 
 \item получение обновлённой версии с возможным получением предыдущих версий файла.
 \item запись информации о действиях пользователей в рамках системы
  \end{itemize}
-\subsection{Описание задач решаемых отдельными компонентами}
+ 
+Клиентская часть реализует сетевой доступ к файлам находящимся в хранилище, посредством WebDAV протокола. Задачами клиентской части являются:
+\begin{itemize}
+\item запрос учётных данных пользователя
+\item реализация представления файловой системы и подключение её к дереву каталогов пользователя
+\item реализацию протокола общения между клиентской частью и сервером приложений
+\item передача файлов пользователя серверу приложений
+\item получение запрошенных файлов с сервера приложений
+\end{itemize}
+
+Хранилище данных решает задачу хранения пользовательских данных, файлов, дерева каталогов и вспомогательных сущностей.
+%\subsection{Описание задач решаемых отдельными компонентами}
 \subsection{Описание интерфейсов между компонентами}
 
 \section{Архитектура программы}
