--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -134,7 +134,7 @@ Samba - серверное ПО реализующее протоколы CIFS, 
 отсутствие версионирования файлов(реализуется только с помощью версионных ФС, реализации 
 которых в Linux не достаточно протестированы для применения в промышленной эксплуатации).
 
-\subsection{FTP с разделением прав}
+%\subsection{FTP с разделением прав}
 
 Данное решение сложно в настройке, использовании. У этого решения отсутствует возможность 
 <<прозрачной>> работы с файлами. Файлы требуется сначала загрузить на локальный диск, внести 
